--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,14 @@
 html {
   font-family: "Montserrat", sans-serif;
 }
+
+.gradient {
+  background: linear-gradient(
+    90deg,
+    #44ff9a -0.55%,
+    #44b0ff 22.86%,
+    #8b44ff 48.36%,
+    #ff6644 73.33%,
+    #ebff70 99.34%
+  );
+}
